[tool.poetry]
name = "crux"
version = "0.1.0"
description = "Crux backend service."
license = "MIT"
authors = ["cvpaper.challenge XCCV group"]
maintainers = [
    "yoshihiro fukuhara <gatheluck@gmail.com>",
    "yoshiki kubotani <yoshikikubotani@gmail.com>",
]
readme = "README.md"
keywords = [
    "crux",
    "Python",
    "llm",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Natural Language :: Japanese",
    "Programming Language :: Python",
    "Topic :: Software Development",
]

[tool.poetry.dependencies]
python = "^3.10"
gunicorn = "^21.2.0"
uvicorn = "^0.23.2"
pydantic = "^2.3.0"
fastapi = "^0.103.0"
orjson = "^3.9.5"
python-multipart = "^0.0.6"
httpx = "^0.24.1"
langchain = "^0.0.274"
openai = "^0.27.9"
tiktoken = "^0.4.0"
faiss-cpu = "^1.7.4"
jinja2 = "^3.1.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.286"
mdformat-gfm = "^0.3.5"
mdformat-frontmatter = "^2.0.1"
mdformat-footnote = "^0.1.1"
flake8 = "^6.0.0"
mypy = "^1.3.0"
pytest-cov = "^4.0.0"
types-requests = "^2.31.0.1"

[tool.black]
line-length = 88

[tool.mypy]
python_version = "3.10"
# following setting is same as pysen
# https://github.com/pfnet/pysen/blob/main/setup.cfg#L12
check_untyped_defs = true
disallow_any_decorated = false
disallow_any_generics = false
disallow_any_unimported = false
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = false
disallow_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
strict_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ruff]
select = ["E", "F", "B", "I"]
ignore = ["E501", "B006"]
line-length = 88
target-version = "py310"
fixable = ["E", "F"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
